fix(custom.css): screen wobble on mobile
From erronous text-indent on <p> that contain images.

--- a/src/static/css/custom.css
+++ b/src/static/css/custom.css
@@ -391,6 +391,12 @@ header {
     padding: 10px;
     margin: 0;
 }
+#content-intro-section > div > p {
+    text-indent: 0;
+}
+#location + p {
+    text-indent: 0;
+}
 #urp-vimeo-div {
     width: 100%;
     max-width: 500px;
